# llm_jupyter_env

./: main.py  pyproject.toml  run-adversarial-attack.txt  run-blackbox-attack.txt  run-vlm-refined.txt  run-vlm-semantic.txt  run-vlm-transfer-refine.txt  run_agent.ipynb
.github/workflows/: adversarial-attack.yml  vlm-refined-attack.yml  vlm-semantic-attack.yml  vlm-transfer-refine.yml
agent_project/: __init__.py
agent_project/agent/: builder.py
agent_project/config/: __init__.py  settings.py
agent_project/tools/: __init__.py  calculator.py  datetime_tool.py  weather.py
跟敲/: main.py  week2实践 copy 3.ipynb  week3.py
